Fix spacing

--- a/imports/plugins/custom/boxycard-reaction-homepage/client/ui/User/pages/About/styles.less
+++ b/imports/plugins/custom/boxycard-reaction-homepage/client/ui/User/pages/About/styles.less
@@ -56,6 +56,7 @@
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,0.15);
   text-align: center;
+  margin: 30px auto;
 
   h3 {
     line-height: 1.2;
@@ -75,6 +76,8 @@
 
 #about-steps {
   text-align: center;
+  margin: 30px auto;
+
   > div {
     float: left;
     width: @third;
